fixed image misalignment issue

--- a/client/src/styles.module.css
+++ b/client/src/styles.module.css
@@ -17,6 +17,10 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+img {
+  object-fit: cover;
+}
+
 #middle div {
   display: block;
 }
@@ -434,51 +438,63 @@
   max-width: 1440px;
   position: relative;
   overflow: hidden;
+  margin-bottom: 200px;
 }
 
 .galleryContainer {
   max-width: 1440px;
   margin: 0 auto;
   box-sizing: border-box;
+  height: 758px;
 }
 
 .galleryContainerInner {
   overflow: visible;
-  padding-bottom: 1px;
   position: relative;
   text-align: center;
   box-sizing: border-box;
+  height: 100%;
 }
 
 .leftSection {
   width: 60%;
   float: left;
   box-sizing: border-box;
+  height: 100%;
+  padding-right: 24px;
 }
 
 .rightSection {
   width: 40%;
   float: right;
   box-sizing: border-box;
+  height: 100%;
 }
 
 .leftSectionTop {
-  height: 480px;
-  width: 95%;
-  margin-top: 24px;
+  height: 400px;
+  width: 100%;
   display: block;
   position: relative;
   font-size: 0;
   line-height: 0;
   overflow: hidden;
+  box-sizing: border-box;
+  margin-bottom: 24px;
+}
+
+.leftSectionBottom {
+  height: 334px;
+  width: 100%;
+  position: relative;
+  box-sizing: border-box;
 }
 
 .leftSectionBottomLeft {
   margin-left: 0;
   float: left;
-  height: 230px;
-  width: 370px;
-  margin-top: 24px;
+  height: 100%;
+  width: 30%;
   overflow: hidden;
   display: block;
   position: relative;
@@ -487,16 +503,15 @@
 }
 
 .leftSectionBottomRight {
-  margin-left: 24px;
   float: left;
-  height: 230px;
-  width: 430px;
-  margin-top: 24px;
+  height: 100%;
+  width: 564px;
   display: block;
   position: relative;
   font-size: 0;
   line-height: 0;
   overflow: hidden;
+  margin-left: 24px;
 }
 
 
